# city-builder-cpp-sfml

./: CMakeLists.txt  README.md
src/: constants.hpp  main.cpp  window_utils.cpp  window_utils.hpp
src/core/: input.cpp  input.hpp  state.hpp  time.cpp  time.hpp
src/render/: renderer.cpp  renderer.hpp
src/sim/: building.hpp  building_prefab.hpp  building_type.hpp  city.cpp  city.hpp
src/ui/: ui_build_bar.cpp  ui_build_bar.hpp  ui_element.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/buttons/: ui_button.cpp  ui_button.hpp
src/utils/: window_utils.cpp  window_utils.hpp
src/world/: camera.cpp  camera.hpp  map.cpp  map.hpp  tile.hpp
